--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,38 @@
+<nav class="navbar row">
+  <div class="col-12 col-md-3">
+    <div class="navbar-brand">
+      <a routerLink="/">
+        <img width="200px" src="/assets/images/home.png" alt="Home" />
+      </a>
+    </div>
+  </div>
+  <div class="col-12 col-md-6 mt-2 mt-md-0">
+    <div class="input-group">
+      <input
+        type="text"
+        id="search_field"
+        class="form-control"
+        placeholder="Enter Product Name ..."
+        [(ngModel)]="searchText"
+        (Input)="clearSearch()"
+        (keydown.enter)="searchThroughKeys()"
+      />
+      <div class="input-group-append">
+        <button (click)="search()" id="search_btn" class="btn">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 col-md-3 mt-4 mt-md-0 text-center">
+    <span id="cart" class="ml-3">Cart</span>
+    <span class="ml-1" id="cart_count">{{ cartCount }}</span>
+  </div>
+</nav>
 <router-outlet></router-outlet>
+<footer class="py-1">
+  <p class="text-center text-dark mt-1">
+    TESTCart - 2022-2023, All Rights Reserved
+  </p>
+</footer>
