--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,34 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <nav class="navbar row">
-      <div class="col-12 col-md-6 mt-2 mt-md-0">
-        <div class="input-group">
-          <input
-            type="text"
-            id="search_field"
-            class="form-control"
-            placeholder="Enter Product Name ..."
-            [(ngModel)]="searchText"
-            (Input)="clearSearch()"
-            (keydown.enter)="searchThroughKeys()"
-          />
-          <div class="input-group-append">
-            <button (click)="search()" id="search_btn" class="btn">
-              <i class="fa fa-search" aria-hidden="true"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-12 col-md-3 mt-4 mt-md-0 text-center">
-        <button class="btn" id="login_btn">Login</button>
-
-        <span id="cart" class="ml-3">Cart</span>
-        <span class="ml-1" id="cart_count">2</span>
-      </div>
-    </nav>
-
     <h1 id="products_heading">Latest Products</h1>
 
     <section id="products" class="container mt-5">
@@ -45,7 +17,9 @@
             />
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">
-                <a href="">{{ product.name }}</a>
+                <a routerLink="/product/{{ product._id }}">{{
+                  product.name
+                }}</a>
               </h5>
               <div class="ratings mt-auto">
                 <div class="rating-outer">
@@ -56,7 +30,12 @@
                 </div>
               </div>
               <p class="card-text">${{ product.price }}</p>
-              <a href="#" id="view_btn" class="btn btn-block">View Details</a>
+              <a
+                routerLink="/product/{{ product._id }}"
+                id="view_btn"
+                class="btn btn-block"
+                >View Details</a
+              >
             </div>
           </div>
         </div>
@@ -67,12 +46,6 @@
         }
       </div>
     </section>
-
-    <footer class="py-1">
-      <p class="text-center text-dark mt-1">
-        TESTCart - 2022-2023, All Rights Reserved
-      </p>
-    </footer>
 
     <script type="text/javascript">
       const stars = 5;
