compled frontend coding, built the app and added code from backend to access app

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,7 @@
 <nav class="navbar row">
   <div class="col-12 col-md-3">
     <div class="navbar-brand">
-      <a routerLink="/">
-        <img width="200px" src="/assets/images/home.png" alt="Home" />
-      </a>
+      <a href="/" style="color: burlywood">Go to Home</a>
     </div>
   </div>
   <div class="col-12 col-md-6 mt-2 mt-md-0">
@@ -26,8 +24,14 @@
   </div>
 
   <div class="col-12 col-md-3 mt-4 mt-md-0 text-center">
-    <span id="cart" class="ml-3">Cart</span>
-    <span class="ml-1" id="cart_count">{{ cartCount }}</span>
+    <a
+      routerLink="/cart"
+      class="btn btn-primary"
+      id="cart_btn"
+      aria-label="Cart"
+      ><span id="cart" class="ml-3">Cart</span>
+      <span class="ml-1" id="cart_count">{{ cartCount }}</span></a
+    >
   </div>
 </nav>
 <router-outlet></router-outlet>
